# molly

./: .gitignore  CMakeLists.txt  Pass.cpp  molly.clang-format
cmake/: FindBarvinok.cmake  FindLibgcc.cmake  FindNtl.cmake  FindPolylib.cmake  GetGitRevisionDescription.cmake
examples/: CMakeLists.txt  submit.py
examples/bench/: CMakeLists.txt  benchtest.cpp
examples/benchtest/: benchtest.cpp
examples/flow/: CMakeLists.txt  flow.cpp  flow1.ll
examples/gameoflife/: CMakeLists.txt  bgmake.sh  gameoflife.cpp  gameoflife1.ll  job.ll
examples/gemm/: CMakeLists.txt  gemm.cpp  gemm1.ll
examples/islpp/: CMakeLists.txt  playground.cpp
examples/jacobi/: CMakeLists.txt  jacobi.cpp  jacobi1.ll
examples/lqcd/: CMakeLists.txt  lqcd.cpp  lqcd1.ll
examples/lqcd2d/: CMakeLists.txt  lqcd2d.cpp  lqcd2d1.ll
examples/stencil/: CMakeLists.txt  cc.bat  clangArgs.txt  llvmArgs.txt  mingwArgs.txt  mollyArgs.txt  pollyArgs.txt  stencil.cpp
include/: CMakeLists.txt
include/islpp/: Aff.h  AffExpr.h  AffList.h  AstBuild.h  AstExpr.h  AstNode.h  BasicMap.h  BasicSet.h  Constraint.h  Ctx.h  Dim.h  DimRange.h  Expr.h  Id.h  Int.h  Isl.h  Islfwd.h  List.h  LocalSpace.h  Map.h  MapSpace.h  MapSpacelike.h  Mapping.h  Mat.h  Multi.h  Multi.inc.h  MultiAff.h  MultiPwAff.h  MultiVal.h  Multi_decls.inc.h  Multi_funcs.inc.h  Multi_members.inc.h  Obj.h  ParamSpace.h  ParamSpacelike.h  Point.h  Printer.h  Pw.h  PwAff.h  PwAffList.h  (+22 more)
include/molly/: CMakeLists.txt  FieldCodeGen.h  FieldDetection.h  LinkAllPasses.h  Mollyfwd.h  RegisterPasses.h
include/mollyrt/: bench.h  lqcd.h  molly.h  molly_debug.h  molly_emulation.h  mypapi.h
lib/: AffineMapping.cpp  AffineMapping.h  CMakeLists.txt  Clangfwd.h  ClusterConfig.cpp  ClusterConfig.h  Codegen.cpp  Codegen.h  CommunicationBuffer.cpp  CommunicationBuffer.h  DistributeField.cpp  Field.h  FieldAccess.cpp  FieldAccess.h  FieldCodeGen.cpp  FieldCodeGen.h  FieldDetection.cpp  FieldDetection.h  FieldDistribution.cpp  FieldDistribution.h  FieldLayout.cpp  FieldLayout.h  FieldType.cpp  FieldType.h  FieldVariable.cpp  FieldVariable.h  FlattenMapping.cpp  FlattenMapping.h  GlobalPassManager.cpp  GlobalPassManager.h  IndirectMapping.cpp  IndirectMapping.h  InlinePrepa.cpp  InlinePrepa.h  InsertInOut.cpp  InsertInOut.h  IslBasicSet.h  IslCtx.cpp  IslCtx.h  IslExprBuilder.cpp  (+60 more)
lib/islpp/: Aff.cpp  AffExpr.cpp  AffList.cpp  AstBuild.cpp  AstExpr.cpp  AstNode.cpp  BasicMap.cpp  BasicSet.cpp  CMakeLists.txt  Constraint.cpp  Ctx.cpp  Dim.cpp  DimRange.cpp  Expr.cpp  Id.cpp  Int.cpp  List.cpp  LocalSpace.cpp  Map.cpp  MapSpace.cpp  MapSpacelike.cpp  Mapping.cpp  Mat.cpp  Multi.cpp  MultiAff.cpp  MultiPwAff.cpp  MultiVal.cpp  Multi_impl.inc.h  Obj.cpp  ParamSpace.cpp  ParamSpacelike.cpp  Point.cpp  Printer.cpp  PwAff.cpp  PwAffList.cpp  PwMultiAff.cpp  PwQPolynomialFold.cpp  Set.cpp  SetList.cpp  SetSpace.cpp  (+14 more)
lib/mollyrt/: CMakeLists.txt  bench.c  bench.cpp  bgmake.sh  bgq_dispatch.c  bgq_dispatch.h  comm.cpp  debug.cpp  molly.cpp  mypapi.cpp
tests/stencil/: CMakeLists.txt  cc.bat  clangArgs.txt  llvmArgs.txt  mingwArgs.txt  mollyArgs.txt  pollyArgs.txt  stencil.cpp
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  cc1_main.cpp  cc1as_main.cpp  driver.cpp  molly.cpp
tools/launcher/: CMakeLists.txt  job.ll.template  job.sh.template  launcher.py.cmake  submit.py.cmake
tools/molly-incrlink/: CMakeLists.txt
tools/mollycc/: CMakeLists.txt  bgmollycc  cc1_main.cpp  cc1as_main.cpp  driver.cpp
tools/playground/: CMakeLists.txt  playground.cpp
