
add_molly_library(LLVMMolly
  SOURCES
    RegisterPasses.cpp
    FieldDetection.cpp
    FieldDistribution.cpp
    FieldType.cpp
    FieldVariable.cpp
    Nodegrid.cpp
    MollyContext.cpp
    MollyContextPass.cpp
    FieldCodeGen.cpp
    ValueSourceAnalysis.cpp
    ScopDistribution.cpp
    ScopStmtSplit.cpp
    MollyUtils.cpp
    MollyInlinePrepa.cpp
    MollyFieldAccess.cpp
    PatternSearchAnalysis.cpp
    GlobalPassManager.cpp
    MollyPassManager.cpp
    SCEVAffinator.cpp
  HEADER_DIRS 
    ${MOLLY_SOURCE_DIR}/include/molly 
    ${MOLLY_SOURCE_DIR}/lib
  LINK_COMPONENTS 
    support
    Polly
  LINK_LIBS 
    Islpp
  TARGET_DEPENDS 
    intrinsics_gen
  EXTERNAL_LIBS 
    #${GMP_LIBRARY} 
    #${ISL_LIBRARY} 
    #${CLOOG_LIBRARY} 
    #${BARVINOK_LIBRARY} 
    #${POLYLIB_LIBRARY} 
    #${LIBGCC_LIBRARY} 
    #${NTL_LIBRARY}
)

add_subdirectory(mollyrt)
add_subdirectory(islpp)
